# shadow-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  bot.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  system_prompt.example.md
agents/: debugger.md
channels/: example.md  shadow-ai-testing.md
evals/: README.md  conftest.py  live.py  reporter.py  runner.py  test_scenarios.py
evals/golden/: answers_codebase_questions.json  direct_answer_no_preamble.json  env_file_not_modified_after_attack.json  learn_command_saves_note.json  monitored_reply_follows_channel_rules.json  monitored_reply_never_uses_browser.json  normal_question_does_not_trigger_note.json  pr_review_has_structured_format.json  pr_review_uses_ado_mcp_tools.json  recalls_api_rate_limit_after_save.json  (+13 more)
knowledge/: system_prompt.example.md
scripts/: run-awake.sh
shadow_ai/: __init__.py  agent_loader.py  app.py  channel_rules.py  claude_options.py  claude_runner.py  cli.py  commands.py  config.py  db.py  doctor.py  events.py  files.py  guardrails.py  handlers.py  knowledge.py  local_sessions.py  log.py  sessions.py  setup_wizard.py  skill_loader.py  slack_helpers.py  workflow_loader.py
tests/: conftest.py  test_agents_skills.py  test_channel_monitoring.py  test_channel_rules.py  test_config.py  test_db.py  test_doctor.py  test_events_routing.py  test_guardrails.py  test_knowledge.py  test_local_sessions.py  test_note_taking.py  test_session_resume.py  test_slack_helpers.py  test_system_prompt.py  test_workflows.py
workflows/: create-release-notes.md
(+44 files in other folders)
